--- a/css/styles.css
+++ b/css/styles.css
@@ -4,8 +4,10 @@
     --text-color: #757575;
     --bcg-footer-color: #2f303a;
     --link-footer-color: rgba(255, 255, 255, 0.6);
+    --hero-btn-shadow: rgba(0, 0, 0, 0.15);
     --white-color: #ffffff;
     --black-color: #000000;
+    --second-bcg: #f5f4fa;
     --main-font: "Roboto", sans-serif;
 }
 
@@ -25,7 +27,8 @@ h3,
 h4,
 h5,
 h6,
-p {
+p,
+ul {
     margin: 0;
     padding: 0%;
 }
@@ -56,6 +59,7 @@ img {
 /* ======GENERAL======= */
 
 .section-title {
+    margin-bottom: 50px;
     font-weight: 700;
     font-size: 36px;
     line-height: 1.167;
@@ -66,12 +70,37 @@ img {
 
 /* ======HEADER======= */
 
+.header .container {
+    display: flex;
+    align-items: center;
+}
+
+.navigation {
+    display: flex;
+    align-items: center;
+}
+
+.nav-list {
+    display: flex;
+    align-items: center;
+}
+
+.header-contacts {
+    display: flex;
+    align-items: center;
+}
+
 .logo {
     font-family: "Raleway", sans-serif;
     font-weight: 700;
     font-size: 26px;
     line-height: 1.192;
-    text-decoration: none;
+}
+
+.navigation .logo {
+    margin-right: 90px;
+    padding-top: 25px;
+    padding-bottom: 25px;
 }
 
  .black-logo {
@@ -88,11 +117,25 @@ img {
 
 .nav-list-link,
 .header-contacts-link {
+    padding-top: 32px;
+    padding-bottom: 32px;
     font-weight: 500;
     font-size: 14px;
     line-height: 1.143;
     letter-spacing: 0.02em;
     color: var(--emphasis-color);         
+}
+
+.nav-list-item:not(:last-child) {
+    margin-right: 50px;
+}
+
+.header-contacts-item:not(:last-child) {
+    margin-right: 50px;
+}
+
+.header-contacts {
+    margin-left: auto;
 }
 
 .current {
@@ -115,31 +158,56 @@ img {
 /* ======HERO======= */
 
 .hero {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     background-color: var(--bcg-footer-color);
+    padding: 200px;
 }
 
 .hero-title {
+    max-width: 696px;
     font-weight: 900;
     font-size: 44px;
     line-height: 1.36;
     text-align: center;
     letter-spacing: 0.06em;
     text-transform: uppercase;
-    color: #ffffff;
+    color: var(--white-color);
 }
 
 .hero-link {
+    display: inline-block;
+    margin-top: 30px;
+    padding: 10px 31px;
+    width: 200px;
+    box-shadow: 0px 4px 4px var(--hero-btn-shadow);
+    border-radius: 4px;
     font-weight: 700;
     font-size: 16px;
     line-height: 1.87;
     letter-spacing: 0.06em;
-    color: #ffffff;
+    color: var(--white-color);
     background-color: var(--accent-color);
 }
 
 /* ======FEATURES======= */
 
+.feature-list {
+    display: flex;
+    padding: 94px 0;
+}
+
+.feature-list-item {
+    width: calc((100% - 90px)/4);
+}
+
+.feature-list-item:not(:last-child) {
+    margin-right: 30px;
+}
+
 .feature-subtitle {
+    margin-bottom: 10px;
     font-weight: 700;
     font-size: 14px;
     line-height: 1.143;
@@ -159,26 +227,56 @@ img {
 
 /* ======WHAT WE DO======= */
 
+.we-do-list {
+    display: flex;
+}
+
+.we-do {
+    padding-bottom: 94px;
+}
+
+.we-do-item:not(:last-child) {
+    margin-right: 30px;
+}
 
 /* ======OUR TEAM======= */
 
 .our-team {
-    background-color: #F5F4FA;
+    padding-top: 94px;
+    padding-bottom: 94px;
+    background-color: var(--second-bcg);
+}
+
+.team-list {
+    display: flex;
+}
+
+.team-list-item:not(:last-child) {
+    margin-right: 30px;
+}
+
+.team-list-item {
+    background-color: var(--white-color);
 }
 
 .team-subtitle {
+    padding-top: 30px;
+    margin-bottom: 10px;
     font-weight: 500;
     font-size: 16px;
     line-height: 1.188;
     letter-spacing: 0.03em;
+    text-align: center;
     color: var(--emphasis-color);
 }
 
 .team-text {
+    padding-bottom: 30px;
     font-weight: 400;
     font-size: 16px;
     line-height: 1.188;
     letter-spacing: 0.03em;
+    text-align: center;
     color: var(--text-color);
 }
 
@@ -186,6 +284,24 @@ img {
 
 .footer {
     background-color: var(--bcg-footer-color);
+}
+
+.footer .logo {
+    display: inline-block;
+    padding-top: 60px;
+    margin-bottom: 20px;
+}
+
+.footer-contacts-link {
+    display: inline-block;
+}
+
+.footer-contacts-link:not(:last-child) {
+    margin-bottom: 9px;
+}
+
+.address {
+    padding-bottom: 60px;
 }
 
 .address > .map {
@@ -204,24 +320,44 @@ img {
 
 
 .projects-button {
+    border: none;
     font-family: inherit;
     font-weight: 500;
     font-size: 16px;
     line-height: 1.62;
     letter-spacing: 0.03em;
-    color: var(--empasis-color);
-    background-color:#F5F4FA;
+    color: var(--emphasis-color);
+    background-color: var(--second-bcg);
+    padding: 6px 22px;
+    border-radius: 4px
 }
 
 .projects-button:hover,
 .projects-button:focus {
     color: #ffffff;
     background-color: var(--accent-color);
+    outline: none;
 }
 
 /* ======PROJECTS======= */
 
+.projects {
+    padding-bottom: 94px;
+    padding-top: 94px;
+}
+
+.projects-list-buttons {
+    display: flex;
+    margin-bottom: 55px;
+    justify-content: center;
+}
+
+.projects-list-item:not(:last-child) {
+    margin-right: 8px;
+}
+
 .projects-name {
+    margin-bottom: 4px;
     font-weight: 700;
     font-size: 18px;
     line-height: 2;
@@ -235,4 +371,30 @@ img {
     line-height: 1.87;
     letter-spacing: 0.03em;
     color: var(--text-color);
+}
+
+.example-list {
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.projects-caption {
+    padding-left: 24px;
+    padding-bottom: 20px;
+    padding-top: 20px;
+    border-left: 1px solid #eeeeee;
+    border-right: 1px solid #eeeeee;
+    border-bottom: 1px solid #eeeeee;
+}
+
+.example-list-item {
+    background-color: var(--white-color);
+}
+
+.example-list-item:not(:nth-child(3n)) {
+    margin-right: 30px;
+}
+
+.example-list-item:nth-child(-n + 6) {
+    margin-bottom: 30px;
 }
